Improved type detection for object properties.

Summary:
This should solve long standing bugs that make kdev-php difficult
to use with common PHP frameworks.

* Properly resolve namespaced identifiers for type information in the phpdoc block
* Default type for class properties without assigned value is now NULL instead of 'mixed'
  (if no other type is specified in the phpdoc block)
* The NULL type is replaced on first assignment to the property.

BUG: 241750
BUG: 295866
FIXED-IN: 5.3.0

Reviewers: brauch

Reviewed By: brauch

Subscribers: brauch, kdevelop-devel

Tags: #kdevelop

Differential Revision: https://phabricator.kde.org/D14876